--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 			<div id="zeit">18:11:32 Uhr</div>
 		</section>
 		<section id="main">
-			Hauptwetter
+			<img src="weather.png" alt="Es sieht nach Sonne aus">
+			<strong>Sonne</strong>
+			<p id="temp">27°C</p>
+			<p id="temp-highlow">
+				<strong>L: 15°C</strong>
+				<strong>L: 32°C</strong>
+			</p>
 		</section>
 		<section id="footer">2024 - Mike Pridik</section>
 	</div>
