--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<strong>Sonne</strong>
 			<p id="temp">27<sup>°C</sup></p>
 			<p id="temp-highlow">
-				<span>L: 15°C</span>
+				<span>T: 15°C</span>
 				<span>H: 32°C</span>
 			</p>
 		</section>
